--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BroncoDirectMe</title>
   </head>
-  <body>
+  <body style="width: 300px">
     <div id="app"></div>
     <script src="./script.js"></script>
   </body>
